# full_project

./: .gitignore  install django apps.txt  makefile  pyproject.toml
server/: pytest.ini
server/api/: auth.py  serializer.py  views.py
server/core/: urls.py
server/core/settings/: base.py  local.py
server/core/test/: test_1.py  test_exm.py
server/products/: admin.py  models.py  serializers.py
server/products/migrations/: 0001_initial.py  0002_alter_products_id.py  0002_products_descreption_products_img_products_prise_and_more.py  0003_alter_products_id.py  0004_alter_products_id.py  0005_alter_products_id.py  0006_alter_products_id.py  0007_alter_products_id.py
server/routers/: urls.py
